--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,6 +1,18 @@
-.w3-sidebar a {
-  font-family: "Roboto", sans-serif
+body {
+  padding-top: 3.5rem;
 }
-body,h1,h2,h3,h4,h5,h6,.w3-wide {
-  font-family: "Montserrat", sans-serif;
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
 }
